# 20240303_comprehensiveDevelop

./: .gitignore  20240303_comprehensiveDevelop.ino  20240303_comprehensiveDevelop_final.ino  DHT11.ino  README.md  file_system.ino  global.h  gpio.ino  info.json  net_connect.ino  server.ino  web.ino  web_server.ino  wifi_connect.ino
data/: WIFIConfig.conf  config.json  p1.html
data/pages/: about.html  function.js  index.html  para.html  setting.html  style.css
include/: file_system.h  gpio.h  web_server.h
main/: DHT11.ino  README.md  file_system.ino  global.h  gpio.ino  info.json  main.ino  net_connect.ino  requirements.txt  web_server.ino
platform_main/: platformio.ini
platform_main/include/: alientek_logo.h  delayNoBlock.h  demo_show.h  dht11.h  global.h  gpio.h  log.h  main.h  net_connect.h  spilcd.h
platform_main/src/: demo_show.cpp  file_system.cpp  gpio.cpp  main.cpp
software/: platformio.ini
software/include/: delayNoBlock.h  file_system.h  game.h  gpio.h  lv_conf.h  main.h  xpt2046.h  (+2 more)
software/lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
software/lib/ui/design/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
software/lib/ui/design/assets/: ui_font_AlibabaPuHuiTi385Bold.c  ui_font_AlibabaPuHuiTi385Bold.fcfg
software/lib/ui/fonts/: ui_font_AlibabaPuHuiTi385Bold.c
software/lib/ui/images/: ui_img_bomb_png.c  ui_img_bright_png.c  ui_img_fan_png.c  ui_img_hotpot_png.c  ui_img_ip_png.c  ui_img_temp_png.c  ui_img_wet_png.c  ui_img_wifi_png.c
software/lib/ui/screens/: ui_Screen1.c
src/: gpio.cpp
(+26 files in other folders)
